src/components/snapshots/dreidel__components__status_bar__tests__renders_cpu_modes_row.snap
---
source: src/components/status_bar.rs
expression: terminal.backend()
---
"┌ dev-box ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│up 3d 4h 0m  load: 1.24 0.98 0.87                                                                  2026-03-25 12:00:00│"
"│cpu    5.2% user    0.2% sys    0.0% nice   84.8% idle    9.8% iowait   0.0% irq   0.0% softirq   0.0% steal          │"
"│tasks  4 total  1 running  3 sleeping  0 stopped  0 zombie                                                            │"
"│███████████                 RAM 6.0G/16.0G   37.5%                                                                    │"
"│                            SWAP 0B/4.0G  free 4.0G                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
